--- a/index.html
+++ b/index.html
@@ -3,12 +3,19 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Animation Duration</title>
+    <title>Animation Delay</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <a href="#">Join Now!</a>
+    <h1>Find The Gazelle</h1>
+
+    <p>Find the gazelle and move your mouse over it to win!</p>
+
+    <div class="game">
+        <img class="gazelle" src="	https://content.codecademy.com/courses/freelance-1/unit-6/gazelle.png" alt="gazelle">
+        <img class="safari" src="	https://content.codecademy.com/courses/freelance-1/unit-6/safari.jpg" alt="safari">
+    </div>
 </body>
 
 </html>
